<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="38dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Space
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="368dp"
        android:layout_height="519dp"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomNavigationView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="114dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_profile" />

            <TextView
                android:id="@+id/lblProfileImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/profileImage" />

            <TextView
                android:id="@+id/lblStoreName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtStoreName"
                tools:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtStoreNameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtStoreName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="hint"
                    android:text="@string/txtStoreName"
                    tools:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/lblUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userNameStore"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtUserNameStoreLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUserNameStore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="hint"
                    android:text="@string/userNameStore"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/lblWebSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/webSite"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtWebSiteLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtWebSite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="hint"
                    android:text="@string/webSite"
                    tools:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/lblDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/storeDescription"
                tools:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtStoreDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtStoreDecription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="hint"
                    android:text="@string/storeDescription"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/lblOpenHour"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:text="@string/openHour"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/txtOpenHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="time" />

                <TextView
                    android:id="@+id/lblCloseHour"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/closeHour"
                    tools:textSize="24sp" />

                <EditText
                    android:id="@+id/txtCloseHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="time"
                    android:selectAllOnFocus="true" />

            </LinearLayout>

            <TextView
                android:id="@+id/lblPrivateInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/privateInfo"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="401dp" />

            <TextView
                android:id="@+id/lblEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fui_email_hint"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="hint"
                    android:text="@string/fui_email_hint"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>